Moved header inside body to prevent clipping

--- a/src/styling/TabContent.css
+++ b/src/styling/TabContent.css
@@ -37,6 +37,7 @@
     font-family: 'CutiveMono';
     font-size: clamp(2px, 6vw, 32px);
     border-bottom: 1px solid white;
+    margin-bottom: 1.5vw;
     overflow: hidden;
     -webkit-transition: opacity 0.5s ease-in-out, display 0.5s ease-in-out;
     -moz-transition: opacity 0.5s ease-in-out, display 0.5s ease-in-out;
@@ -47,7 +48,7 @@
 
 #about-body {
     display: flex;
-    margin-top: 1.75vw;
+    flex-direction: column;
     color: white;
     font-size: clamp(2px, 3vw, 17px);
     font-weight: 300;
